fix: Not do weird extra white space on sidebar nav link

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -25,7 +25,7 @@ html, body {
   flex-direction: column;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-y: hidden;
 
   .btn {
     &.btn-dark {
